--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script>var Alert = ReactBootstrap.Alert;</script>
     <title>React App</title>
   </head>
   <body>
